--- a/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
+++ b/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
@@ -65,10 +65,14 @@ span.panel-order-selector-container {
     }
   }
 
-  span.items-container {
+  span.products-container {
     grid-area: items-container;
     overflow-y: auto;
+    padding: 10px;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   span.subtotal-container {
@@ -86,6 +90,7 @@ span.panel-order-selector-container {
   span.finish-order-wrapper {
     flex-grow: 0.05;
     width: 100%;
+    min-height: 4.5rem;
 
     button.finish-order {
       width: 100%;
