--- a/frontend-pos/src/app/shared/components/item-card/item-card.component.html
+++ b/frontend-pos/src/app/shared/components/item-card/item-card.component.html
@@ -3,12 +3,11 @@
     <img *ngIf="imagePath" mat-card-image [src]="imagePath">
     <mat-icon *ngIf="!imagePath" class="material-icons-outlined empty-image">image</mat-icon>
   </span>
-  <span #titleContainer class="title-container" *ngIf="item?.title">
-    <span class="title" [ngClass]="{'title-infinite-cycling': textOverflows()}">{{item.title}}</span>
+  <span #titleContainer class="title-container" *ngIf="item?.description">
+    <span class="title" [ngClass]="{'title-infinite-cycling': textOverflows()}">{{item.description}}</span>
   </span>
   <span class="category" *ngIf="item?.category">{{'ITEM-CARD.CATEGORY' | translate}}: {{item.category}}</span>
-  <span class="barcode" *ngIf="item?.barCode">{{'ITEM-CARD.CODE' | translate}}: {{item.barCode}}</span>
-  <!--  <span class="price" *ngIf="item?.price">{{item.price | currency :'CAD':'symbol-narrow':'1.2-2'}}</span>-->
+  <span class="barcode" *ngIf="item?.barcode">{{'ITEM-CARD.CODE' | translate}}: {{item.barcode}}</span>
   <span class="price-quantity">
       <span class="price" *ngIf="item?.price">{{item.price}}</span>
       <span class="quantity" *ngIf="item?.quantity">{{item.quantity}}</span>
