CSS - Basket - Styles in main screen

--- a/frontend-pos/src/app/features/basket/basket.component.scss
+++ b/frontend-pos/src/app/features/basket/basket.component.scss
@@ -48,6 +48,7 @@ div.basket-container {
       padding: 0 10px;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      grid-template-rows: repeat(auto-fill, minmax(13rem, 1fr));
       flex-direction: row;
       flex-wrap: wrap;
       gap: 10px;
