CSS - Order selector image margin and padding

--- a/frontend-pos/src/app/features/basket/components/product-order-selector/product-order-selector.component.scss
+++ b/frontend-pos/src/app/features/basket/components/product-order-selector/product-order-selector.component.scss
@@ -30,6 +30,7 @@ div.item-card-container {
     border-radius: 10px;
     margin-bottom: 10px;
     grid-area: image;
+    margin-right: 10px;
 
     & > img, & > mat-icon {
       max-height: 7em;
