--- a/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
+++ b/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
@@ -16,6 +16,7 @@ span.panel-order-selector-container {
     justify-content: center;
     color: $green-medium;
     font-size: $font-size-1-25-rem;
+    margin: 0.4rem 0;
   }
 
   span.current-order-container {
@@ -79,6 +80,7 @@ span.panel-order-selector-container {
     margin: 10px 0;
     display: flex;
     justify-content: space-between;
+    font-size: $font-size-1-25-rem;
 
     span.subtotal-text {
       &::after {
@@ -93,6 +95,7 @@ span.panel-order-selector-container {
     min-height: 4.5rem;
 
     button.finish-order {
+      font-size: $font-size-1-25-rem;
       width: 100%;
       height: 100%;
     }
