--- a/frontend-pos/src/app/shared/components/category-list/category-list.component.scss
+++ b/frontend-pos/src/app/shared/components/category-list/category-list.component.scss
@@ -15,6 +15,10 @@
     height: inherit;
     overflow-y: hidden;
 
+    button {
+      margin: 0 5px;
+    }
+
     &::-webkit-scrollbar {
       display: none;
     }
@@ -26,7 +30,7 @@ button.category-button {
   min-width: fit-content;
   height: 100%;
   background: $white;
-  margin: 0 5px;
+  //margin: 0 5px;
   box-shadow: 1px 1px 5px 0 $gray-lighter;
   font-weight: bold;
 
@@ -44,6 +48,7 @@ button.category-button {
 
   &.all {
     height: 100%;
+    margin-right: 5px;
   }
 }
 
