--- a/frontend-pos/src/app/features/basket/basket.component.scss
+++ b/frontend-pos/src/app/features/basket/basket.component.scss
@@ -1,4 +1,5 @@
 @import "src/app/styles/colors";
+@import "src/app/styles/general";
 
 $grid-gap: 5px;
 
@@ -15,7 +16,7 @@ div.basket-container {
     height: 100%;
     align-items: center;
     justify-content: center;
-    padding: 5px;
+    padding: $size-5px $size-5px 0 $size-5px;
     box-sizing: border-box;
 
     & * {
@@ -26,6 +27,7 @@ div.basket-container {
       display: flex;
       flex-direction: row;
       width: 100%;
+      gap: $grid-gap;
 
       pos-search-input {
         height: 100%;
