--- a/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
+++ b/frontend-pos/src/app/features/basket/components/order-selector/panel-order-selector.component.scss
@@ -87,6 +87,11 @@ span.panel-order-selector-container {
         content: ':';
       }
     }
+
+    span.subtotal-amount {
+      font-weight: bold;
+      color: $green-medium;
+    }
   }
 
   span.finish-order-wrapper {
