--- a/frontend-pos/src/app/styles/material-themes.scss
+++ b/frontend-pos/src/app/styles/material-themes.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+
 @include mat.core();
 
 $palette-green: (
@@ -77,7 +78,7 @@ $my-theme: mat.define-light-theme((
   color: (
     primary: $my-primary,
     accent: $my-accent,
-    warn: $my-warn,
+    warn: $my-warn
   ),
   typography: mat.define-typography-config(),
   density: 0,
