--- a/frontend-pos/src/styles.scss
+++ b/frontend-pos/src/styles.scss
@@ -6,6 +6,7 @@
 @import "app/styles/fonts";
 @import "app/styles/snack-bar";
 @import "app/styles/material-form";
+@import "app/styles/panel-classes";
 @import "material-icons/iconfont/material-icons.css";
 //@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
